--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,6 +24,9 @@
       "dom"
     ],
     "resolveJsonModule": true,
+    "types": [
+      "node",
+    ]
   },
   "angularCompilerOptions": {
     "enableI18nLegacyMessageIdFormat": false,
