--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
     "@ng-bootstrap/ng-bootstrap": "^16.0.0",
     "@popperjs/core": "^2.11.8",
     "bootstrap": "^5.3.2",
+    "cors": "^2.8.5",
+    "express": "^4.19.2",
+    "mongodb": "^6.7.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
@@ -31,6 +34,7 @@
     "@angular/compiler-cli": "^17.1.0",
     "@angular/localize": "^17.1.0",
     "@types/jasmine": "~5.1.0",
+    "@types/node": "^20.14.2",
     "jasmine-core": "~5.1.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
